@@ -1,6 +1,11 @@
 2008-03-12  Dan Williams  <dcbw@redhat.com>
 
 	* src/applet-dialogs.c
+		- (info_dialog_update): 802.11 speed is now in Kb/s
+
+2008-03-12  Dan Williams  <dcbw@redhat.com>
+
+	* src/applet-dialogs.c
 		- (info_dialog_update): strdup returned hardware address to match
 			changes in libnm-glib API
 
